# LSDNet

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
devops/: Dockerfile  build_cpp.sh  build_image.sh  detect_lines.sh  launch_web_vis.sh  requirements.txt
line_extracter/: CMakeLists.txt  build_project.sh  compute_eigen_coords.cpp  compute_eigen_coords.h  img_processor.cpp  img_processor.h  kde.cpp  kde.h  lsd_methods.cpp  lsd_methods.h  main.cpp  neural_network.cpp  neural_network.h  region_growing.cpp  region_growing.h  region_splitter.cpp  region_splitter.h  roi_extraction.cpp  roi_extraction.h  segment_extractor.cpp  segment_extractor.h  speed_test_results  to_original_scale.cpp  to_original_scale.h
lsd/: __init__.py  detect_lines.py
lsd/models_onnx/: model.onnx
visualization/: context.py  display_gradio.py  draw_pred.py
wireframe_tiny/markup/: 112.jpg.json  114.jpg.json  129.jpg.json  35.jpg.json  40.jpg.json  48.jpg.json  49.jpg.json  51.jpg.json  54.jpg.json  55.jpg.json  63.jpg.json  67.jpg.json  71.jpg.json  75.jpg.json  77.jpg.json  84.jpg.json  89.jpg.json  93.jpg.json  95.jpg.json  97.jpg.json
